--- a/style.css
+++ b/style.css
@@ -93,6 +93,10 @@ header.container-grid {
     border-radius: 40px;
 }
 
+#sobre p{
+    font-size: 30px;
+}
+
 #sobre {
     display: flex;
     align-items: center;
@@ -122,7 +126,7 @@ header.container-grid {
 .titulo h2 {
     color: var(--branco);
     margin-bottom: 0;
-    background-color: var(--roxo-pixelV);
+    background-color: var(--amarelo);
     border-radius: 20px;
     padding: 10px 18px;
 }
@@ -133,4 +137,80 @@ header.container-grid {
     background-color: #D1CBC2;
     border-radius: 20px;
     padding: 10px 18px;
+    font-size: 40px;
 }
+
+.titulo h2 {
+    display: flex;
+    align-items: center;
+    gap: 80px;
+    margin-top: 120px;
+    margin-bottom: 50px;
+
+}
+#servicos .titulo {
+    justify-content: center;
+    margin-bottom: 20px;
+
+}
+
+.container-cards {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+    gap: 0px;
+    position: relative;
+}
+
+#servicos .card {
+    width: 300px;
+    margin: 50px;
+    padding: 40px;
+    border-radius: 40px;
+    background-color: #D1CBC2;
+    color: #653B20;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+    text-align: center;
+
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+
+
+}
+
+#servicos .card h3 {
+    font-size: 24px;
+    margin: 5px 0 30px;
+    color: var(--amarelo);
+    font-family: "Recursive", sans-linear-bold;
+    text-align: center;
+
+    color: #ffff;
+}
+
+#servicos .card p{
+    color: #000;
+    font-size: 20px;
+}
+#servicos .card svg {
+    color: var(--roxo-pixelV);
+    height: 75px;
+}
+
+#servicos .card:hover {
+    border: solid 3px var(--verde-pixelV);
+}
+
+#cases h2{
+    margin-right: 5px;
+
+}
+
+#placeholder {
+    background-color: #653B20;
+    color: #000000;
+  }
+  
